# pystats

./: .gitignore  Dockerfile  Makefile  README.md  build.sh  building.md  pyproject.toml  pystat.py  requirements.txt
app/: .dockerignore  Dockerfile  LICENSE  README.md  build.sh  pyproject.toml  pystat.py  requirements.txt
app/src/: cli.py  home.html.j2  logger.py  requests.py  stat_requests.py  stats.py  stats_html.py
app/templates/: 404.html  base.html  home.html  pagination.html  requests.html  servers.html  srv_pagination.html  srv_requests.html  stats.html
app/tests/: README.md
src/: home.html.j2  stats.py  stats_html.py
